[tool.poetry]
name = "miccai-ibn"
version = "0.1.0"
description = "Scripts corresponding to the MICCAI 2022 project: Autism spectrum disorder classification based on
interpersonal neural synchrony"
authors = ["Christan Gerloff <christian.gerloff@rwth-aachen.de>"]
license = "BSD-4-Clause"

[tool.poetry.dependencies]
python = ">=3.8.8,<3.11"
numpy = "^1.22.3"
atlasreader = "^0.1.2"
pyarrow = "^7.0.0"
dask = "^2022.5.0"
seaborn = "^0.11.2"
ipykernel = "^6.13.1"
pytest = "^7.1.2"
mlflow = "^1.26.1"
karateclub = "^1.3.0"
scikit-optimize = "^0.9.0"
conda = "^4.3.16"

[tool.poetry.dev-dependencies]
pylama = "^8.3.8"
pytest = "^7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"